Use nontrivial-gray-streams

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -24,90 +24,37 @@
    },
    "outputs": [
     {
-     "ename": "interrupt",
-     "evalue": "Execution interrupted",
-     "output_type": "error",
-     "traceback": []
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type SIMPLE-ERROR\n",
-      "  Unsupported wildcard pattern: \"2671dab9be5a41500a382f6ac5e9ec1d-*\"\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 3.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 4.\n",
-      " Return to debug level 3.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 5.\n",
-      " Return to debug level 4.\n",
-      " Return to debug level 3.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 6.\n",
-      " Return to debug level 5.\n",
-      " Return to debug level 4.\n",
-      " Return to debug level 3.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 7.\n",
-      " Return to debug level 6.\n",
-      " Return to debug level 5.\n",
-      " Return to debug level 4.\n",
-      " Return to debug level 3.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 8.\n",
-      " Return to debug level 7.\n",
-      " Return to debug level 6.\n",
-      " Return to debug level 5.\n",
-      " Return to debug level 4.\n",
-      " Return to debug level 3.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n",
-      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
-      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
-      " Return to debug level 9.\n",
-      " Return to debug level 8.\n",
-      " Return to debug level 7.\n",
-      " Return to debug level 6.\n",
-      " Return to debug level 5.\n",
-      " Return to debug level 4.\n",
-      " Return to debug level 3.\n",
-      " Return to debug level 2.\n",
-      " Return to debug level 1.\n",
-      " Abort thread.\n"
+      "Hello, World"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Goodbye, cruel World."
      ]
     }
    ],
@@ -209,7 +156,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "; Loading \"shasht\"\n",
       "\n"
      ]
@@ -247,7 +193,7 @@
      "text": [
       "{\n",
       "  \"foo\": \"bar\",\n",
-      "  \"quux\": 1.23e+0\n",
+      "  \"quux\": 1.23\n",
       "}"
      ]
     }
@@ -407,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +362,7 @@
        "FIBONACCI"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +392,7 @@
        "21"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +423,7 @@
        "        (+ (FIBONACCI (- N 2)) (FIBONACCI (- N 1))))))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -487,7 +433,7 @@
        "T"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -497,7 +443,7 @@
        "FIBONACCI"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +471,7 @@
        "foo `quux`"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +493,7 @@
        "               8 \\pi G c^{-4} T_{\\mu \\nu}$$"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1117,7 @@
        "LISP-ROCKS"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1137,7 @@
        "For the record Lisp **rocks**!"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1164,7 @@
        "ASK"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,16 +1178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your quest?  wibble\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "QUEST"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1214,7 @@
        "NIL"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1269,7 +1222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your quest is: "
+      "Your quest is: wibble"
      ]
     }
    ],
@@ -1286,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1279,7 @@
        "NO-OUTPUT-READER"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1336,7 +1289,7 @@
        "T"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1313,7 @@
        "NIL"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1385,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1347,7 @@
        "A1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1404,7 +1357,7 @@
        "A2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1414,7 +1367,7 @@
        "B"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1424,7 +1377,7 @@
        "C1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1434,7 +1387,7 @@
        "C2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1444,7 +1397,7 @@
        "C3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1454,7 +1407,7 @@
        "((C1 C2 C3) (B) (A1 A2))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1430,7 @@
        "A1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1487,7 +1440,7 @@
        "A2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1497,7 +1450,7 @@
        "B"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1507,7 +1460,7 @@
        "C1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1517,7 +1470,7 @@
        "C2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1527,7 +1480,7 @@
        "C3"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1537,7 +1490,7 @@
        "(C1 B A1)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1513,7 @@
        "1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1570,7 +1523,7 @@
        "2"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1580,7 +1533,7 @@
        "3"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1590,7 +1543,7 @@
        "((/ 9 3) (- 4 2) (+ 0 1))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,13 +1575,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Common Lisp (Armed Bear Common Lisp)",
+   "display_name": "Common Lisp (SBCL)",
    "language": "common-lisp",
-   "name": "common-lisp_abcl"
+   "name": "common-lisp_sbcl"
   },
   "language_info": {
    "codemirror_mode": "text/x-common-lisp",
@@ -1636,7 +1596,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "1.9.1-fasl43"
+   "version": "2.4.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
