--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -266,77 +266,42 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DIVISION-BY-ZERO: arithmetic error DIVISION-BY-ZERO signalled\n",
+      "Operation was (/ 1 0).\n",
+      "\n"
+     ]
+    },
+    {
      "ename": "DIVISION-BY-ZERO",
      "evalue": "arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).",
      "output_type": "error",
      "traceback": [
-      "3: ((FLET \"H1\" :IN COMMON-LISP-JUPYTER::MY-EVAL) arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).)",
-      "4: (SB-KERNEL::%SIGNAL arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).)",
-      "5: (ERROR DIVISION-BY-ZERO OPERATION / OPERANDS (1 0))",
-      "6: (\"DIVISION-BY-ZERO-ERROR\" 1 0)",
-      "7: (SB-KERNEL:INTERNAL-ERROR #.(SB-SYS:INT-SAP #X7F7B8362DC80) #<unused argument>)",
-      "8: (\"foreign function: call_into_lisp\")",
-      "9: (\"foreign function: funcall2\")",
-      "10: (\"foreign function: interrupt_internal_error\")",
-      "11: (\"foreign function: #x558902F62993\")",
-      "12: (SB-KERNEL::INTEGER-/-INTEGER 1 0)",
-      "13: (/ 1 0)",
-      "14: (SB-INT:SIMPLE-EVAL-IN-LEXENV (/ 1 0) #<NULL-LEXENV>)",
-      "15: (EVAL (/ 1 0))",
-      "16: (COMMON-LISP-JUPYTER::MY-EVAL (/ 1 0))",
-      "17: ((:METHOD JUPYTER:EVALUATE-CODE (COMMON-LISP-JUPYTER:KERNEL T)) #<unused argument> (/ 1 0))",
-      "18: (JUPYTER::HANDLE-EXECUTE-REQUEST)",
-      "19: (JUPYTER::RUN-SHELL #<KERNEL {1003A22F83}>)",
-      "20: ((LAMBDA NIL :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))",
-      "21: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
-      "22: ((FLET \"WITHOUT-INTERRUPTS-BODY-11\" :IN SB-THREAD::RUN))",
-      "23: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
-      "24: ((FLET \"WITHOUT-INTERRUPTS-BODY-4\" :IN SB-THREAD::RUN))",
-      "25: (SB-THREAD::RUN)",
-      "26: (\"foreign function: call_into_lisp\")",
-      "27: (\"foreign function: funcall1\")"
+      "0: (SB-KERNEL::INTEGER-/-INTEGER 1 0)",
+      "1: (JUPYTER/COMMON-LISP::EVAL-AND-PRINT (/ 1 0) 0 NIL)",
+      "2: ((:METHOD JUPYTER:EVALUATE-FORM (JUPYTER/COMMON-LISP:KERNEL T T T)) #<unused argument> #<FORM-TRACKING-STREAM for \"file /tmp/3D441E8A88BC46B06CDA2BF46EF0847C-2919389606.lisp\" {100596E7C3}> CELL:2919389606.LISP.NEWEST NIL #<unused argument> #<unused argument>)",
+      "3: (JUPYTER/COMMON-LISP::REPL (/ 1 0) CELL:2919389606.LISP.NEWEST NIL)",
+      "4: ((:METHOD JUPYTER:EVALUATE-CODE (JUPYTER/COMMON-LISP:KERNEL T)) #<unused argument> (/ 1 0) CELL:2919389606.LISP.NEWEST NIL)",
+      "5: (JUPYTER::HANDLE-EXECUTE-REQUEST)",
+      "6: (JUPYTER::RUN-SHELL #<KERNEL {1003A53293}>)",
+      "7: ((LABELS BORDEAUX-THREADS::%BINDING-DEFAULT-SPECIALS-WRAPPER :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))",
+      "8: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
+      "9: ((FLET \"WITHOUT-INTERRUPTS-BODY-174\" :IN SB-THREAD::RUN))",
+      "10: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
+      "11: ((FLET \"WITHOUT-INTERRUPTS-BODY-167\" :IN SB-THREAD::RUN))",
+      "12: (SB-THREAD::RUN)",
+      "13: (\"foreign function: call_into_lisp_\")"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#<ENVIRONMENT {1003A05853}>\n",
-      "   [Environment of thread #<THREAD \"SHELL Thread\" RUNNING {10051C8C13}>]\n",
-      "\n",
+      "SB-INT:SIMPLE-STYLE-WARNING: Lisp error during constant folding:\n",
       "arithmetic error DIVISION-BY-ZERO signalled\n",
-      "Operation was (/ 1 0).\n",
-      "   [Condition of type DIVISION-BY-ZERO]\n",
-      "\n",
-      "\n",
-      "Backtrace:\n",
-      " 3: ((FLET \"H1\" :IN COMMON-LISP-JUPYTER::MY-EVAL) arithmetic error DIVISION-BY-ZERO signalled\n",
-      "Operation was (/ 1 0).)\n",
-      " 4: (SB-KERNEL::%SIGNAL arithmetic error DIVISION-BY-ZERO signalled\n",
-      "Operation was (/ 1 0).)\n",
-      " 5: (ERROR DIVISION-BY-ZERO OPERATION / OPERANDS (1 0))\n",
-      " 6: (\"DIVISION-BY-ZERO-ERROR\" 1 0)\n",
-      " 7: (SB-KERNEL:INTERNAL-ERROR #.(SB-SYS:INT-SAP #X7F7B8362DC80) #<unused argument>)\n",
-      " 8: (\"foreign function: call_into_lisp\")\n",
-      " 9: (\"foreign function: funcall2\")\n",
-      " 10: (\"foreign function: interrupt_internal_error\")\n",
-      " 11: (\"foreign function: #x558902F62993\")\n",
-      " 12: (SB-KERNEL::INTEGER-/-INTEGER 1 0)\n",
-      " 13: (/ 1 0)\n",
-      " 14: (SB-INT:SIMPLE-EVAL-IN-LEXENV (/ 1 0) #<NULL-LEXENV>)\n",
-      " 15: (EVAL (/ 1 0))\n",
-      " 16: (COMMON-LISP-JUPYTER::MY-EVAL (/ 1 0))\n",
-      " 17: ((:METHOD JUPYTER:EVALUATE-CODE (COMMON-LISP-JUPYTER:KERNEL T)) #<unused argument> (/ 1 0))\n",
-      " 18: (JUPYTER::HANDLE-EXECUTE-REQUEST)\n",
-      " 19: (JUPYTER::RUN-SHELL #<KERNEL {1003A22F83}>)\n",
-      " 20: ((LAMBDA NIL :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))\n",
-      " 21: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
-      " 22: ((FLET \"WITHOUT-INTERRUPTS-BODY-11\" :IN SB-THREAD::RUN))\n",
-      " 23: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
-      " 24: ((FLET \"WITHOUT-INTERRUPTS-BODY-4\" :IN SB-THREAD::RUN))\n",
-      " 25: (SB-THREAD::RUN)\n",
-      " 26: (\"foreign function: call_into_lisp\")\n",
-      " 27: (\"foreign function: funcall1\")"
+      "Operation was (/ 1 0).\n"
      ]
     }
    ],
@@ -353,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +327,7 @@
        "FIBONACCI"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +357,7 @@
        "21"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +388,7 @@
        "        (+ (FIBONACCI (- N 2)) (FIBONACCI (- N 1))))))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -433,7 +398,7 @@
        "T"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -443,7 +408,7 @@
        "FIBONACCI"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +436,7 @@
        "foo `quux`"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +458,7 @@
        "               8 \\pi G c^{-4} T_{\\mu \\nu}$$"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1082,7 @@
        "LISP-ROCKS"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1102,7 @@
        "For the record Lisp **rocks**!"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1129,7 @@
        "ASK"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1159,7 @@
        "QUEST"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1179,7 @@
        "NIL"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1239,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1244,7 @@
        "NO-OUTPUT-READER"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1289,7 +1254,7 @@
        "T"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1278,7 @@
        "NIL"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1334,89 +1299,6 @@
    "metadata": {},
    "source": [
     "Multiple value returns function correctly and previous result/form are set. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A1"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "A2"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "B"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "C1"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "C2"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "C3"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "((C1 C2 C3) (B) (A1 A2))"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(values 'a1 'a2) \n",
-    "'b \n",
-    "(values 'c1 'c2 'c3) \n",
-    "(list / // ///)"
    ]
   },
   {
@@ -1487,10 +1369,93 @@
     {
      "data": {
       "text/plain": [
-       "(C1 B A1)"
+       "((C1 C2 C3) (B) (A1 A2))"
       ]
      },
      "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(values 'a1 'a2) \n",
+    "'b \n",
+    "(values 'c1 'c2 'c3) \n",
+    "(list / // ///)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "A2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "B"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "C1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "C2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "C3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(C1 B A1)"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1478,7 @@
        "1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1523,7 +1488,7 @@
        "2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1533,7 +1498,7 @@
        "3"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1543,7 +1508,7 @@
        "((/ 9 3) (- 4 2) (+ 0 1))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
